--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,102 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Header {
+  background-color: #0b0c10;
+  height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Logo {
+  margin: 0 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Main {
+  height: 80vh;
+  background-color: #1f2833;
+  display: flex;
+  flex-direction: row;
+}
+
+.Main-sides {
+  width: 49.6vw;
+  height: 98%;
+}
+
+.Main-leftside {
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.Divider {
+  margin: 50px 0;
+  width: 0.4vw;
+  background-color: #45a29e;
+  border-radius: 6px;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.Btn-upload {
+  display: flex;
+  align-items: center;
+  margin-bottom: 70px;
+}
+
+.Image {
+  height: 500px;
+}
+
+.Footer {
+  background-color: #0b0c10;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Footer-p {
+  margin-right: 20px;
+  color: #66fcf1;
+  font-size: x-large;
+  font-weight: 600;
+}
+
+.Input {
+  background-color: #1f2833;
+  border: 3px solid #45a29e;
+  padding: 0 10px;
+  height: 30px;
+  width: 150px;
+  margin-right: 20px;
+  color: white;
+  font-size: large;
+  font-weight: 600;
+  border-radius: 4px;
+}
+
+.Input::placeholder {
+  color: #c5c6c7;
+  font-weight: 600;
+}
+
+.Btn {
+  padding: 0 20px;
+  height: 34px;
+  background-color: #1f2833;
+  border: 3px solid #45a29e;
+  color: white;
+  font-size: large;
+  font-weight: 600;
+  border-radius: 4px;
+  cursor: pointer;
 }
